# databricks-agent

./: README.md  app.yaml  example.env  links.txt  main.py  pyproject.toml  requirements.txt
data/: clientes.csv  produtos.csv  vendas.csv
mlruns/0/: meta.yaml
mlruns/0/1397d9c851da4af5a3b5f7ed727eff12/: meta.yaml
mlruns/0/1397d9c851da4af5a3b5f7ed727eff12/outputs/m-cc181693f1394de68cb8c5681c8d050a/: meta.yaml
mlruns/0/1d6e05f40cfc4447aaaf946704ff1c79/: meta.yaml
mlruns/0/1d6e05f40cfc4447aaaf946704ff1c79/tags/: mlflow.runName
mlruns/0/252a093610a44431a1646d4c2e7b3a41/: meta.yaml
mlruns/0/252a093610a44431a1646d4c2e7b3a41/tags/: mlflow.runName
mlruns/0/3a1e81fcf08c473cbede762a2c7cecd2/: meta.yaml
mlruns/0/5b644e2df651423aa84f401e0ba89f2a/: meta.yaml
mlruns/0/706255b9c361451b947d54b5baf54bc2/: meta.yaml
mlruns/0/93838cc38b764fd09f4a52379fffcb5c/: meta.yaml
mlruns/0/models/m-0068d9ee159341d789992e355cf90d3a/: meta.yaml
mlruns/0/models/m-1079989cd9fb4acfb2b4dfb0b4b98461/: meta.yaml
mlruns/0/models/m-319273578c004f71912adb03761a39ac/: meta.yaml
mlruns/0/models/m-4ebb11e45258454c81d16c8add1cdea5/: meta.yaml
mlruns/0/models/m-76db0b7762ec4025a09f1f175cd988c4/: meta.yaml
mlruns/0/models/m-cc181693f1394de68cb8c5681c8d050a/: meta.yaml
mlruns/0/models/m-fe29ead305ec465d91bd0c4bbc88c4ed/: meta.yaml
sql-agent/: db.py
src/: README.md  app.py  app.yaml  criando-tabela.ipynb  main.py  settings.py
src/example/: README.md  serving-models-databricks.py
src/sql-agent/: README.md  app.py  databricks-agent.py  databricks_agent.py  example.env
(+7 files in other folders)
