[project]
name = "databricks-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-langchain>=0.11.0",
    "databricks-sdk>=0.73.0",
    "databricks-sql-connector>=4.2.1",
    "databricks-sqlalchemy>=2.0.8",
    "databricks-vectorsearch>=0.63",
    "faker>=38.2.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "mlflow>=3.6.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
